fix(material/button): add more prominent focus indication in high contrast mode (#20821)
We currently have some focus indication in high contrast mode, but it's very
difficult to see. These changes replace the old one with a 3x thicker outline.

Fixes #20820.

--- a/src/material-experimental/mdc-button/button.scss
+++ b/src/material-experimental/mdc-button/button.scss
@@ -24,6 +24,12 @@
   }
 }
 
+@include cdk-high-contrast(active, off) {
+  .mat-mdc-button-base:focus {
+    outline: solid 3px;
+  }
+}
+
 // Since the stroked button has has an actual border that reduces the available space for
 // child elements such as the ripple container or focus overlay, an inherited border radius
 // for the absolute-positioned child elements does not work properly. This is because the
